Fix invisible service form

--- a/src/styles/components/modal/full-screen/styles.less
+++ b/src/styles/components/modal/full-screen/styles.less
@@ -34,6 +34,11 @@
 
     .modal-body-offset {
       margin: -@modal-full-screen-body-padding-vertical -@modal-full-screen-body-padding-horizontal;
+
+      & > .gm-scrollbar-container {
+        flex: 1 1 auto;
+        height: auto;
+      }
     }
   }
 
